particles system in header

--- a/style.css
+++ b/style.css
@@ -11,3 +11,12 @@
       font-size: 3.5rem;
     }
   }
+
+  body{
+    overflow-x: hidden;
+  }
+  canvas {
+    position: absolute;
+    overflow: hidden;
+    opacity: 60%;
+  }
